--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-native": "^0.71.11",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
+    "react-router-native": "^6.13.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
